--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "bus-tracker",
+  "name": "metabus",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.11",
     "leaflet": "^1.8.0",
+    "leaflet-routing-machine": "^3.2.12",
     "lrm-google": "^1.0.1",
+    "lrm-graphhopper": "^1.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-leaflet": "^4.0.0",
@@ -19,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
