--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lrm-google": "^1.0.1",
     "lrm-graphhopper": "^1.3.0",
     "react": "^18.0.0",
+    "react-beforeunload": "^2.5.3",
     "react-dom": "^18.0.0",
     "react-leaflet": "^4.0.0",
     "react-multi-form": "^1.0.5",
